--- a/index.html
+++ b/index.html
@@ -82,15 +82,17 @@
           Next
         </button>
         <h2 id="image-title"></h2>
-        <div class="max-w-[50%] rounded-[24px] shadow-lg bg-[#28292a]">
+        <div class="max-w-[50%]">
             <img
               id="nasa-image"
               src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Moon_rotating_full_220px.gif?20160322235610"
               alt="current image"
-              class="object-contain h-full w-full rounded-lg"
+              class="object-contain h-full w-full rounded-[24px]"
             />
+        </div>
+        <div class="max-w-[100%] rounded-[24px] shadow-lg bg-[#28292a]">
             <p id="image-description"></p>
-          </div>
+        </div>
       </div>
     </main>
     <h2>Related results</h2>
