tailwind no work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>NASA Image Search</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="./dist/output.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="main-header">
