--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           src=" https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/nasa-logo.svg"
           alt="nasa-logo"
         />
-        <h1 class="text-left">Space Image Generator</h1>
+        <h1 class="text-left text-base">Space Image Generator</h1>
       </div>
     </div>
     <br />
