--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   </head>
   <div class="container">
     <body>
-      <div class="main-header text-base">
+      <div class="main-header">
         <div class="flex">
           <img
             id="nasa-logo"
             src=" https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/nasa-logo.svg"
             alt="nasa-logo"
           />
-          <h1 class="text-left text-base">Space Image Generator</h1>
+          <h1 class="text-left">Space Image Generator</h1>
         </div>
       </div>
       <br />
