--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
-  <div class="container">
+  <!-- <div class="container"> -->
     <body>
       <div class="main-header">
         <div class="flex">
@@ -104,5 +104,5 @@
       </scrolling-carousel>
       <footer></footer>
     </body>
-  </div>
+  <!-- </div> -->
 </html>
