Update nasa logo image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="flex">
         <img
           id="nasa-logo"
-          src=" https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/nasa-logo.svg"
+          src="./images/nasa-logo.svg"
           alt="nasa-logo"
         />
         <h1 class="text-left">Space Image Generator</h1>
